--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,18 @@
 version: '2'
 services:
   web:
-    image: whyour/qinglong:latest
-    volumes:
+     public: true
+     container_name: qinglong
+     image: whyour/qinglong:latest
+     volumes:
       - ./data:/ql/data
     ports:
-      - "0.0.0.0:5700:5700"
+        - 5700:5700
+     resources:
+       cpu: 1000m
+       memory: 2048Mi
+       storage:
+         size: 5Gi
+         class: standard
     restart: unless-stopped
+
